@@ -2,3 +2,6 @@
 .ant-form-item-extra {
   margin-top: 0 !important;
 }
+.alert-container {
+  max-width: 30rem;
+}
