@@ -1,5 +1,6 @@
 11/1/2021
 -   Fleet updater fix and allow downgrade
+-   Increased design limit from 20 to 40
 
 9/1/2021
 -   Improved battle performances
